Remove include/ in distclean target
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23933 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/x86_64-w64-mingw32/Makefile
+++ b/toolchain/crosstool/x86_64-w64-mingw32/Makefile
@@ -91,4 +91,4 @@ reallyclean: clean
 
 distclean: reallyclean
 	$(MAKE) -f Makefile.ctng clean
-	rm -rf distfiles prepare.done source.done
+	rm -rf distfiles include prepare.done source.done
