config.done depends on prepare.done
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23934 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/x86_64-w64-mingw32/Makefile
+++ b/toolchain/crosstool/x86_64-w64-mingw32/Makefile
@@ -41,20 +41,20 @@ prepare.done:
 
 # Configure the cross-toolchain
 
-config.done:
+config.done: prepare.done
 	DEFCONFIG=$(TUPLE).config $(CTNG) defconfig
 	$(CTNG) oldconfig
 	DEFCONFIG=$(TUPLE).config $(CTNG) savedefconfig
 	touch $@
 
-menuconfig:
+menuconfig: prepare.done
 	DEFCONFIG=$(TUPLE).config $(CTNG) defconfig
 	$(CTNG) menuconfig
 	$(CTNG) oldconfig
 	DEFCONFIG=$(TUPLE).config $(CTNG) savedefconfig
 	touch config.done
 
-upgradeconfig:
+upgradeconfig: prepare.done
 	DEFCONFIG=$(TUPLE).config $(CTNG) defconfig
 	$(CTNG) upgradeconfig
 	$(CTNG) oldconfig
