Enabled CT_BINUTILS_FOR_TARGET
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23935 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/x86_64-w64-mingw32/x86_64-w64-mingw32.config
+++ b/toolchain/crosstool/x86_64-w64-mingw32/x86_64-w64-mingw32.config
@@ -16,6 +16,7 @@ CT_TARGET_VENDOR="w64"
 # CT_TOOLCHAIN_CMAKE_TOOLCHAIN_FILE is not set
 CT_KERNEL_WINDOWS=y
 # CT_BINUTILS_RELRO is not set
+CT_BINUTILS_FOR_TARGET=y
 # CT_MINGW_TOOLS is not set
 # CT_LIBC_XLDD is not set
 CT_CC_GCC_CONFIG_TLS=y
