Fixed the path to the mingw cross-toolchain
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23936 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile
+++ b/toolchain/crosstool/Makefile
@@ -49,7 +49,7 @@ ifeq ($(shell uname -m), x86_64)
 # Build with Alire GNAT Native
 BUILDPATH	:= $(HOME)/.local/share/alire/toolchains/gnat_native_15.2.1_4640d4b3/bin
 ifeq ($(CONFIGSUFFIX), .win64)
-BUILDPATH	:= $(BUILDPATH):$(shell pwd)/x86-64-w64-mingw32/bin
+BUILDPATH	:= $(BUILDPATH):$(shell pwd)/x86_64-w64-mingw32/gcc-x86_64-w64-mingw32/bin
 endif
 BUILDPATH	:= $(BUILDPATH):/usr/bin
 endif
