--- a/toolchain/crosstool/AArch64.config
+++ b/toolchain/crosstool/AArch64.config
@@ -18,9 +18,8 @@ CT_STATIC_TOOLCHAIN=y
 CT_TARGET_VENDOR="muntsos"
 CT_KERNEL_LINUX=y
 CT_LINUX_V_6_12=y
+# CT_BINUTILS_RELRO is not set
 # CT_GLIBC_ENABLE_DEBUG is not set
-CT_GLIBC_ENABLE_COMMON_FLAG=y
-CT_CC_GCC_SYSTEM_ZLIB=y
 CT_CC_GCC_CONFIG_TLS=y
 # CT_CC_GCC_USE_LTO is not set
 CT_CC_GCC_LIBSTDCXX=y
@@ -31,16 +30,9 @@ CT_CC_GCC_LIBSTDCXX=y
 CT_CC_LANG_CXX=y
 CT_CC_LANG_FORTRAN=y
 CT_CC_LANG_ADA=y
+CT_CC_LANG_D=y
 CT_CC_LANG_GOLANG=y
 CT_CC_LANG_OTHERS="m2"
 CT_DEBUG_GDB=y
 CT_GDB_NATIVE_STATIC_LIBSTDCXX=y
 CT_DEBUG_STRACE=y
-CT_GETTEXT_V_0_23_1=y
-CT_GMP_EXTRA_CFLAGS=""
-CT_ISL_V_0_26=y
-CT_LIBICONV_V_1_16=y
-CT_NCURSES_V_6_4=y
-# CT_NCURSES_NEW_ABI is not set
-CT_NCURSES_TARGET_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
-CT_NCURSES_EXTRA_CFLAGS=""
