--- a/toolchain/crosstool/control
+++ b/toolchain/crosstool/control
@@ -4,4 +4,4 @@ Priority: extra
 Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
-Description: GCC cross-toolchain for @@BOARDNAME@@
+Description: GCC cross-toolchain for @@BOARDNAME@@ built with Crosstool-NG
