Remove build* and gcc* in reallyclean target
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23941 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/arm-gnu/Makefile
+++ b/toolchain/arm-gnu/Makefile
@@ -118,7 +118,7 @@ endif
 clean:
 
 reallyclean: clean
-	rm -rf *.done src
+	rm -rf *.done build* gcc* src
 
 distclean: reallyclean
 	rm -f $(SRCDIST)
