--- a/toolchain/arm-gnu/Makefile.dpkg
+++ b/toolchain/arm-gnu/Makefile.dpkg
@@ -29,11 +29,10 @@ GCC_VERN	:= $(shell $(INSTALLDIR)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gc
 GCC_VERS	:= $(shell $(INSTALLDIR)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gcc/ { print $$0 }')
 
 BUILDNUM	?= 1
-OSNAME		?= unknown
 PKGNAME		:= gcc-$(TOOLCHAIN_NAME)
 PKGVER		:= $(GCC_VERN)-$(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= $(shell dpkg --print-architecture)
-PKGSUFFIX	:= $(PKGVER)-$(OSNAME)-$(PKGARCH)
+PKGSUFFIX	:= $(PKGVER)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
 PKGFILE		:= $(PKGNAME)-$(PKGSUFFIX).deb
 
