Separate build number with - instead of .
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23952 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/arm-gnu/Makefile.dpkg
+++ b/toolchain/arm-gnu/Makefile.dpkg
@@ -30,7 +30,7 @@ GCC_VERS	:= $(shell $(INSTALLDIR)/bin/$(CONFIGURE_NAME)-gcc --version | awk '/gc
 
 BUILDNUM	?= 1
 PKGNAME		:= gcc-$(TOOLCHAIN_NAME)
-PKGVER		:= $(GCC_VERN)-$(shell date +%Y.%j).$(BUILDNUM)
+PKGVER		:= $(GCC_VERN)-$(shell date +%Y.%j)-$(BUILDNUM)
 PKGARCH		:= $(shell dpkg --print-architecture)
 PKGSUFFIX	:= $(PKGVER)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
