Added Homepage.  Removed Section and Priority.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23954 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/arm-gnu/control.template
+++ b/toolchain/arm-gnu/control.template
@@ -1,7 +1,6 @@
 Package: @@NAME@@
-Section: misc
-Priority: extra
-Maintainer: Philip Munts <phil@munts.net>
-Architecture: @@ARCH@@
 Version: @@VERSION@@
+Architecture: @@ARCH@@
 Description: GCC cross-toolchain for @@BOARDNAME@@ built with GNU Dev Tools for ARM
+Maintainer: Philip Munts <phil@munts.net>
+Homepage: https://github.com/pmunts/muntsos
