Copy package files to $(SERVERDIR)
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23958 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/arm-gnu/Makefile
+++ b/toolchain/arm-gnu/Makefile
@@ -126,6 +126,9 @@ endif
 packages.done: build.done
 	$(MAKE) -f Makefile.dpkg
 	$(MAKE) -f Makefile.rpm
+ifneq ($(SERVERDIR),)
+	scp gcc*.dpkg gcc*.rpm $(SERVERDIR)
+endif
 	touch $@
 
 ##############################################################################
