Fixed the scp command
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23959 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/arm-gnu/Makefile
+++ b/toolchain/arm-gnu/Makefile
@@ -127,7 +127,7 @@ packages.done: build.done
 	$(MAKE) -f Makefile.dpkg
 	$(MAKE) -f Makefile.rpm
 ifneq ($(SERVERDIR),)
-	scp gcc*.dpkg gcc*.rpm $(SERVERDIR)
+	scp gcc*.deb gcc*.rpm $(SERVERDIR)
 endif
 	touch $@
 
