Separate the build number with a - instead of a .
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23964 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -341,7 +341,7 @@ DISTFILES	+= $(LIBCAP_DIST)
 
 BUILDNUM	?= 1
 PKGNAME		:= $(INSTALLDIR)-libs
-PKGVER		:= $(GCCVER)-$(shell date +%Y.%j).$(BUILDNUM)
+PKGVER		:= $(GCCVER)-$(shell date +%Y.%j)-$(BUILDNUM)
 PKGARCH		:= all
 PKGSUFFIX	:= $(PKGVER)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
