Separate build number with - instead of .
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23965 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -42,7 +42,7 @@ STRIP		:= $(CROSS_COMPILE)strip
 
 BUILDNUM	?= 1
 PKGNAME		:= $(INSTALLDIR)-libsimpleio
-PKGVER		:= $(GCCVER)-$(shell date +%Y.%j).$(BUILDNUM)
+PKGVER		:= $(GCCVER)-$(shell date +%Y.%j)-$(BUILDNUM)
 PKGARCH		:= all
 PKGDIR		:= $(PKGNAME)-$(PKGVER)-$(PKGARCH)
 PKGFILE		:= $(PKGDIR).deb
