Remove -Z parameter (default is xz).
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@23967 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/crosstool/Makefile.dpkg
+++ b/toolchain/crosstool/Makefile.dpkg
@@ -77,7 +77,7 @@ package.deb: build.done
 	sed -i 's/@@TOOLCHAIN_VERN@@/$(GCC_VERN)/g'	$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
 	sed -i 's/@@TOOLCHAIN_VERS@@/$(GCC_VERS)/g'	$(PKGDIR)$(TOOLCHAIN_DIR)/share/gpr/$(CONFIGURE_NAME).cgpr
 	chmod -R ugo-w					$(PKGDIR)/usr
-	fakeroot dpkg-deb -Zxz --build			$(PKGDIR)
+	fakeroot dpkg-deb --build			$(PKGDIR)
 	chmod -R u+w					$(PKGDIR)/usr
 
 ################################################################################
